--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <div id="page">
     <main>
       <section id="cover">
-        <h4>Sua próxima viagem</h4>
+        <h4>Sua próxima viagem:</h4>
         <h1>Conheça Busan</h1>
         <img src="assets/busan.jpg" alt="Imagem de Busan, a estrela em ascensão da Coreia do Sul">
-        <p>Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</p>
+        <p id="subtitle">Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. <br> Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</p>
       </section>
       <section id="discover">
         <h4>Para os amantes de história</h4>
@@ -29,29 +29,42 @@
         <img src="assets/temple-haedong.jpg" alt="Imagem do Templo Haedong Yonggungsa">
         <h3>1. Templo Haedong Yonggungsa</h3>
         <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar - você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro.</p>
-        <p>Bom para:</p>
+        <br />
+        <p id="label">Bom para:</p>
         <ul>
-          <li>História</li>
+          <li>
+            <p id="blue">História</p>
+          </li>
         </ul>
       </section>
       <section id="beomeo">
         <img src="assets/temple-beomeo.jpg" alt="Imagem do Templo Beomeo-sa">
         <h3>2. Templo Beomeo-sa</h3>
         <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.</p>
-        <p>Bom para:</p>
+        <br />
+        <p id="label">Bom para:</p>
         <ul>
-          <li>História</li>
+          <li>
+            <p id="blue">História</p>
+          </li>
         </ul>
       </section>
       <section id="yongdusan">
         <img src="assets/park-yongdusan.jpg" alt="Imagem do Parque Yongdusan">
         <h3>3. Parque Yongdusan</h3>
         <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus - confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.</p>
-        <p>Bom para:</p>
+        <br />
+        <p id="label">Bom para:</p>
         <ul>
-          <li>Casais</li>
-          <li>Famílias</li>
-          <li>Orçamento</li>
+          <li>
+            <p id="purple">Casais</p>
+          </li>
+          <li>
+            <p id="pink">Famílias</p>
+          </li>
+          <li>
+            <p id="orange">Orçamento</p>
+          </li>
         </ul>
       </section>
       <section id="finish">
